# parcel-yavalath

./: .gitignore  README.md  index.html  package-lock.json  package.json
configs/: elo_current.json
crate/: Cargo.toml
crate/src/: engine.rs  lib.rs  main.rs
crate/src/main/: constants.rs
js/: index.js  index.worker.js  utils.js
results/: elo_current.json
scripts/: arena.py  build-for-subdir.mjs  build-wasm.mjs
src/: main.js  main.test.js  style.css
src/wasm/: yavalath_engine.d.ts  yavalath_engine.js  yavalath_engine_bg.wasm.d.ts
