[package]
name = "yavalath_engine"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0/MIT"
description = "Strong Yavalath engine compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "s"
